# agent-relay

./: .dockerignore  .gitignore  .mcp.json  DEPLOYMENT.md  README.md  REFACTORING.md  docker-compose.dev.yml  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  alembic.ini  fly.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  auth.py  config.py  database.py  logging_config.py  main.py  middleware.py  models.py  rate_limit.py  schemas.py  security.py  websocket_manager.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_e2e.py  test_edge_cases.py  test_join_code.py  test_listen.py  test_message_types.py  test_migrations.py  test_presence.py  test_registry.py  (+9 more)
blog/: agent-relay-v2-building-real-time-agent-communication.md
docs/: deployment.md  reliability-boundaries.md
frontend/: .env.example  .env.production  Dockerfile  index.html  package-lock.json  package.json
mcp-server/: README.md  pyproject.toml
mcp-server/src/agent_relay_mcp/: __init__.py  server.py
mcp-server/tests/: test_server.py
output/: cycle2_improvements.md  discovery_spec.md  dogfood_review.md  improvement_plan.md  quality_report.md  rate_limiter.py  research_report.md  retry_decorator.py  v3_roadmap.md
sdk/: README.md  pyproject.toml
sdk/src/agent_relay/: __init__.py  _utils.py  async_client.py  cli.py  client.py  config.py  exceptions.py  models.py
sdk/tests/: test_async_client.py  test_cli.py  test_client.py  test_config.py
(+83 files in other folders)
