[project]
name = "agent-relay-mcp"
version = "0.1.0"
description = "MCP server for Agent Relay - use turn-based agent communication from Claude Code, Cursor, etc."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
agent-relay-mcp = "agent_relay_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_relay_mcp"]
